# rust-kube-test

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile
kube/: kustomization.yaml
kube/postgres/: deployment.yaml  secret.yaml
kube/redis/: deployment.yaml  secret.yaml
kube/service/: configmap.yaml  deployment.yaml  secret.yaml  service.yaml
src/: main.rs
