[package]
name = "basic_actix"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.13.0"
serde = { version = "1.0.197", features = ["derive"]}
redis = { version = "0.29.2", features = ["tokio-comp"] }
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "postgres"] }
